add tox.ini and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,14 +15,13 @@ exclude =
     __pycache__,
     build,
     dist,
-    tests/fixtures/*,
+    tests/*,
     *.md,
     *.pyc,
     *.egg-info,
     .cache,
     .eggs,
-    src/python-project-template/__init__.py,
-    scripts/whitelist.py
+    stochastic_service_composition/__init__.py,
 max-complexity = 10
 max-line-length = 120
 
@@ -34,7 +33,7 @@ use_parentheses=True
 line_length=88
 
 [black]
-exclude = "scripts/whitelist.py
+exclude = ""
 
 
 [mypy]
