--- a/Pipfile
+++ b/Pipfile
@@ -11,10 +11,19 @@ pytest-cov = "*"
 pytest-randomly = "*"
 tox = "*"
 ipython = "*"
+jupyter = "*"
 flake8 = "*"
-mypy = "*"
+flake8-bugbear = "*"
+flake8-docstrings = "*"
+flake8-eradicate = "*"
+flake8-isort = "*"
+pydocstyle = "*"
+black = "==21.4b2"
 isort = "*"
 pytest-lazy-fixture = "*"
+mypy = "*"
+hypothesis = "*"
+
 
 [requires]
 python_version = "3.8"
