--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,9 @@ strict_optional = True
 [mypy-pytest]
 ignore_missing_imports = True
 
+[mypy-pytest_lazyfixture]
+ignore_missing_imports = True
+
 # Per-script options
 [mypy-scripts/whitelist]
 ignore_errors = True
