--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,4 @@
 [tox]
-isolated_build = True
 envlist = bandit, safety, check-copyright, black-check, isort-check, vulture, flake8, mypy, pylint, py3.8, py3.7, docs
 
 [tox:.package]
@@ -45,36 +44,36 @@ deps =
     flake8-isort
     pydocstyle
 commands =
-    flake8 stochastic_service_composition tests scripts
+    flake8 stochastic_service_composition tests
 
 [testenv:mypy]
 skip_install = True
 deps =
     mypy
 commands =
-    mypy stochastic_service_composition tests scripts
+    mypy stochastic_service_composition tests
 
 [testenv:pylint]
 skipdist = True
 deps = pylint
-commands = pylint stochastic_service_composition tests scripts
+commands = pylint stochastic_service_composition tests
 
 [testenv:black]
 skip_install = True
 deps = black==20.8b1
-commands = black stochastic_service_composition tests scripts
+commands = black stochastic_service_composition tests
 
 [testenv:black-check]
 skip_install = True
 deps = black==20.8b1
-commands = black stochastic_service_composition tests scripts --check --verbose
+commands = black stochastic_service_composition tests --check --verbose
 
 [testenv:isort]
 skip_install = True
 deps = isort
-commands = isort stochastic_service_composition tests scripts
+commands = isort stochastic_service_composition tests
 
 [testenv:isort-check]
 skip_install = True
 deps = isort
-commands = isort --check-only stochastic_service_composition tests scripts
+commands = isort --check-only stochastic_service_composition tests
