--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,8 +26,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run:  pip install tox
-    - name: Pylint
-      run: tox -e pylint
+#    - name: Pylint
+#      run: tox -e pylint
     - name: Code style check
       run: |
         tox -e black-check
