--- a/setup.cfg
+++ b/setup.cfg
@@ -42,8 +42,11 @@ strict_optional = True
 
 # Per-module options:
 
-;[mypy-numpy]
-;ignore_missing_imports = True
+[mypy-numpy]
+ignore_missing_imports = True
+
+[mypy-graphviz]
+ignore_missing_imports = True
 
 # Per-module options for tests dir:
 
