add notebook to show service APIs

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,9 @@ ignore_missing_imports = True
 [mypy-graphviz]
 ignore_missing_imports = True
 
+[mypy-IPython.core.display]
+ignore_missing_imports = True
+
 # Per-module options for tests dir:
 
 [mypy-pytest]
@@ -55,7 +58,3 @@ ignore_missing_imports = True
 
 [mypy-pytest_lazyfixture]
 ignore_missing_imports = True
-
-# Per-script options
-[mypy-scripts/whitelist]
-ignore_errors = True
