add prototype of target-system mdp product

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,9 @@ ignore_missing_imports = True
 [mypy-IPython.core.display]
 ignore_missing_imports = True
 
+[mypy-mdp_dp_rl.*]
+ignore_missing_imports = True
+
 # Per-module options for tests dir:
 
 [mypy-pytest]
