--- a/tox.ini
+++ b/tox.ini
@@ -78,3 +78,31 @@ commands = isort stochastic_service_composition tests
 skip_install = True
 deps = isort
 commands = isort --check-only stochastic_service_composition tests
+
+[testenv:docs]
+skip_install = True
+deps =
+    mkdocs
+    mkdocs-material
+    markdown-include
+    pymdown-extensions
+    markdown
+    mknotebooks
+    mkdocs-bibtex
+commands =
+    mkdocs build --clean
+
+[testenv:docs-serve]
+skip_install = True
+deps =
+    mkdocs
+    mkdocs-material
+    markdown-include
+    pymdown-extensions
+    markdown
+    mknotebooks
+    mkdocs-bibtex
+commands =
+    mkdocs build --clean
+    python -c 'print("###### Starting local server. Press Control+C to stop server ######")'
+    mkdocs serve
