update docs title

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: My Docs
+site_name: Stochastic Service Composition
 repo_name: 'marcofavorito/stochastic-service-composition'
 repo_url: https://github.com/marcofavorito/stochastic-service-composition
 
