--- a/digital_twins/config.json
+++ b/digital_twins/config.json
@@ -1,7 +1,7 @@
 {
   "uri": "https://things.eu-1.bosch-iot-suite.com/api/2",
-  "namespace": "com.bosch.service",
-  "client_id": "f6b43823-b040-4f0f-893f-f16e50c76952",
+  "namespace": "com.bosch.services",
+  "client_id": "24ffcaf8-4c7c-481d-90a2-2e2a282e1c3c",
   "client_secret": "client_secret",
-  "scope": "service:iot-hub-prod:t18b00c729314420382a3bf405e783ca0_hub/full-access service:iot-things-eu-1:18b00c72-9314-4203-82a3-bf405e783ca0_things/full-access service:vorto"
+  "scope": "service:iot-hub-prod:t0c7793b5e5034a44a0a40bc454099cba_hub/full-access service:iot-things-eu-1:0c7793b5-e503-4a44-a0a4-0bc454099cba_things/full-access service:vorto"
 }
